# Rose

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: linux.yml  windows.yml
scripts/: check_perft.lua  nextver.sh
src/: main.cpp  rose_network.txt
src/rose/: bitboard.hpp  board.hpp  byte_board.h  byteboard.cpp  byteboard.h  common.h  common.hpp  config.cpp  config.h  config.hpp  dbg.cpp  dbg.hpp  depth.h  engine.cpp  engine.h  engine.hpp  engine_output.h  engine_output.hpp  engine_output_null.h  engine_output_null.hpp  engine_output_uci.h  engine_output_uci.hpp  engine_output_xboard.hpp  game.cpp  game.h  game.hpp  geometry.h  geometry.hpp  hash.cpp  hash.h  hash.hpp  history.cpp  history.h  history.hpp  interface.cpp  interface.hpp  limits.hpp  line.h  line.hpp  move.cpp  (+41 more)
src/rose/cmd/: bench.cpp  bench.h  bench.hpp  check_perft.cpp  check_perft.h  perft.cpp  perft.h  perft.hpp
src/rose/eval/: concepts.hpp  eval.h  hce.cpp  hce.h  network.cpp  network.h  null_observer.hpp
src/rose/nnue/: network.cpp  network.hpp  nnue.cpp  nnue.hpp
src/rose/tool/: game_result.h
src/rose/util/: assert.cpp  assert.h  assert.hpp  defer.h  defer.hpp  lsb_iterator.hpp  multi_array.hpp  pext.h  (+12 more)
tests/: bch.cpp  bench.cpp  byteboard.cpp  datagen.cpp  experiment_branchless_see.cpp  experiment_piece_directions.cpp  game.cpp  geometry.cpp  movegen.cpp  network.cpp  position.cpp  see.cpp  test_geometry.cpp  test_is_legal.cpp  test_movegen.cpp  test_perft.cpp  test_position.cpp  test_tt.cpp  tt.cpp
tools/: rose-datagen.cpp  rose-generate-hash.cpp
(+16 files in other folders)
